# dotfiles

./: .bashrc  .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiexternal.toml.tmpl  .gitmodules  .vimrc  LICENSE.txt  README.md  dot_Brewfile  dot_bashrc  dot_gitconfig.tmpl  dot_vimrc  dot_zshrc  renovate.json  run_after_ansible.sh  run_after_poetryinstall.sh  run_once_install_ansible.sh  run_onchange_after_poetryinstall.sh  run_onchange_ansible.sh  run_onchange_poetryinstall.sh  versions.yaml
.bashrc.d/: bitwarden.sh  prompt.sh  rvm.sh  zzz_direnv.sh
dot_bashrc.d/: android.sh  bash_history.sh  brew.sh  completion.sh  completion.sh.tmpl  direnv.sh  dotnet.sh  executable_atuin.sh  flutter.sh  gpg-agent.sh  java.sh  nvm.sh  python-tools.sh  quarto.sh  rust.sh  starship.sh  testcontainers.sh  zzz_atuin.sh
dot_claude/: settings.json
dot_config/: starship.toml
dot_config/autostart/: symlink_org.kde.yakuake.desktop
dot_config/git/: commit-prompt.txt
dot_config/git/hooks/: executable_pre-commit  executable_prepare-commit-msg  gitleaks.pre-commit-config.yaml  markdownlint.pre-commit-config.yaml  pre-commit-hooks.pre-commit-config.yaml  woke.pre-commit-config.yaml  yamllint.pre-commit-config.yaml
dot_config/opencode/plugins/: config.js
dot_config/topgrade.d/: ansible-pull-environment.toml  disabled.toml
dot_zshrc.d/: 00-brew.sh  android.sh  bindkey.sh  direnv.sh  java.sh  nvm.sh  privacy.sh  rust.sh  starship.sh  zzz_atuin.sh
private_dot_gnupg/: gpg-agent.conf
private_dot_ssh/: config
python-tools/: pyproject.toml
tools/python/: pyproject.toml
(+6 files in other folders)
