[tool.poetry]
name = "python-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_tools"}]

[tool.poetry.dependencies]
python = "^3.12"
crc-bonfire = "^5.6.0"
setuptools = "^69.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
